--- a/django/day5/ex04/templates/ex04/remove.html
+++ b/django/day5/ex04/templates/ex04/remove.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
         {{ form }}
         {% for elem in data %}
-            <option value="{{elem.0}}">{{elem.1}}</option>
+            <option value="{{elem.0}}"/>
         {% endfor %}
         <button type="submit">Remove</button>
     </form>
